Fix service image z-index

--- a/src/index.css
+++ b/src/index.css
@@ -333,7 +333,7 @@ All colors MUST be HSL.
     background-position: center;
     background-repeat: no-repeat;
     opacity: 0.4;
-    z-index: 1;
+    z-index: 10;
     pointer-events: none;
   }
   
